<resources>
    <string name="app_name">Petlander</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Войти</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Как вас зовут?</string>
    <string name="btn_continue">Продолжить</string>
    <string name="error_fill_name">Пожалуйста, заполните поле</string>
    <string name="stay_at_home">stay at home.</string>
    <string name="petlander">Petlander</string>
    <string name="add_photo">Добавить фотографию</string>
    <string name="btn_add">Добавить</string>
    <string name="hint_description">Описание</string>
    <string name="add_confirm">Добавить</string>
</resources>
