<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_feed"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_map"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_dashboard" />

</menu>
